Issue #23507 nucleus-tests rebased to glassfish.zip and enabled
Signed-off-by: David Matějček <dmatej@seznam.cz>